--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Music.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="SoundComponent.cpp" />
+    <ClCompile Include="SoundSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioEngine.h" />
@@ -139,6 +140,7 @@
     <ClInclude Include="Music.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundComponent.h" />
+    <ClInclude Include="SoundSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
